--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,11 @@
     <title>Tomasz Brylski - Frontend Developer (React)</title>
   </head>
   <body>
+    <script>
+      if (window.location.pathname !== '/' && window.location.pathname !== '/index.html') {
+        window.location.href = '/';
+      }
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
